AC_INIT([libpthreadpool], [0.1], [mdukhan3@gatech.edu])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AM_PROG_AR
AC_PROG_CC_C99
AC_PROG_RANLIB
AC_CONFIG_FILES([Makefile])

AC_C_INLINE

AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([setenv])

AC_CHECK_HEADERS([stddef.h])
AC_CHECK_HEADERS([stdint.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADER_STDBOOL

AC_OUTPUT
